not a perfect css fix but stops the overflow when screen is less than 1000px

--- a/src/static/css/admin.css
+++ b/src/static/css/admin.css
@@ -38,8 +38,10 @@ div.innerwrapper {
   float: right;
   opacity: 0.9;
   padding: 15px;
-  width: 860px;
-  border-radius: 0 0 7px 7px;
+  max-width: 860px;
+  bordr-radius: 0 0 7px 7px;
+  margin-left:250px;
+  min-width:400px;
 }
 
 #wrapper {
